--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "dev": "ts-node-dev --prefer-ts true --no-notify -r tsconfig-paths/register --watch src --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "lint": "eslint --fix --ext .js,.ts,.json ."
   },
   "dependencies": {
@@ -28,6 +28,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "prettier": "^2.5.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
