--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "microstats": "^0.1.2",
-    "os-utils": "^0.0.14",
+    "node-os-utils": "^1.3.6",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
-    "@types/os-utils": "^0.0.1",
+    "@types/node-os-utils": "^1.2.0",
     "@types/socket.io": "^3.0.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
