--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "microstats": "^0.1.2",
@@ -17,6 +18,7 @@
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
