--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "microstats": "^0.1.2",
     "node-os-utils": "^1.3.6",
