--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "microstats": "^0.1.2",
     "node-os-utils": "^1.3.6",
+    "ping": "^0.4.1",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "@types/node-os-utils": "^1.2.0",
+    "@types/ping": "^0.4.1",
     "@types/socket.io": "^3.0.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
