--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 WEATHER_API_URL = http://api.weatherapi.com/v1/current.json
 WEATHER_API_KEY = 46737a507a404460a2f210730222802
+BASE_URL = /api/v1
+PORT = 3333
